--- a/pages/about.html
+++ b/pages/about.html
@@ -27,71 +27,76 @@
                 </div>
                 <div class="navb">
                     <!--
--->
+                    -->
                     <a href="home.html">Home</a>
                     <!--
--->
+                    -->
                     <a href="about.html">About Wells Fargo</a>
                     <!--
--->
+                    -->
                     <a href="events.html">Sibos Events</a>
                     <!--
--->
+                    -->
                     <a href="booth.html">Wells Fargo Booth</a>
                     <!--
--->
+                    -->
                     <a href="speakers.html">Sibos Speakers</a>
                     <!--
--->
+                    -->
                     <a href="explore.html">Explore Dubai</a>
                     <!--
--->
+                    -->
                     <a href="giving.html">Charitable giving</a>
                     <!--
--->
+                    -->
                 </div>
             </div>
             <!-- #EndLibraryItem -->
             <div id="feature">
+                <img class="" src="../images/banners/aboutWellsFargoPage.png" alt="">
                 <img class="banner" src="../images/header/reins.png" alt="">
                 <table>
-                <tr>
-                    <td width="65%" rowspan="2"><h2>ABOUT WELLS FARGO </h2>
-                        <p>Wells Fargo is one of the largest banks in the United States,
-                            and is the most valuable bank in the world in terms of market capitalization.
-                            Founded in 1852 and headquartered in San Francisco, Wells Fargo provides banking, insurance, investments,
-                            mortgage, consumer, and commercial finance through various distribution channels. We have offices in more than
-                            35 countries to support customers who conduct business in the global economy. </p>
-                        <p>Wells Fargo serves one in three businesses in America.
-                            We&rsquo;ve operated under the same vision for decades: We want to satisfy all our customers&rsquo;
-                            financial needs and help them succeed financially. The GFI team executes this vision by serving the
-                            increasing financial needs of financial institutions, central banks, multi-laterals, sovereign wealth funds,
-                            and non-bank financial institutions in the markets where we conduct business.</p></td>
-                    <td>&nbsp;</td>
-                    <td valign="top" class="blocks ribron"><h3>Resources</h3></td>
-                </tr>
-                <tr>
-                    <td width="5%">&nbsp;</td>
-                    <td width="30%" valign="top" class="blocks"><p>Learn more about Wells Fargo </p>
-                        <ul>
-                            <li><a href="https://www.wellsfargo.com/downloads/pdf/about/wellsfargotoday.pdf">Wells Fargo Today</a></li>
-                            <li><a href="https://www.wellsfargo.com/downloads/pdf/about/csr/reports/2012-social-responsibility-interim.pdf">Social Responsibility report</a></li>
-                            <li><a href="https://www.wellsfargo.com/downloads/pdf/press/2q13pr.pdf">Latest earnings report</a></li>
-                        </ul>
-                        <p>&nbsp;</p></td>
-                </tr>
-                <tr>
-                    <td colspan="3"><h4>Our global presence includes: </h4>
-                        <ul>
-                            <li>Worldwide reach with over 35 overseas offices and branch locations in DIFC,
-                                Hong Kong, <br>
-                                London, Seoul, Shanghai, Singapore, Taipei, Tokyo, Toronto, and the Cayman Islands</li>
-                            <li>More than 3,000 team members covering the global needs of our clients</li>
-                            <li>Relationships with over 2,000 financial institutions overseas and in the U.S.</li>
-                            <li>Customers in over 125 countries</li>
-                        </ul>
-                        <p>To learn more, just click on one of the links below to download our brochure or visit <a href="http://www.wellsfargo.com/international">wellsfargo.com/international</a>.</p></td>
-                </tr>
+                    <tr>
+                        <td width="65%"><h2>About Wells Fargo</h2></td>
+                        <td colspan="2">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <td width="65%" rowspan="2"><p>Wells Fargo is one of the largest banks in the United States,
+                                and is the most valuable bank in the world in terms of market capitalization.
+                                Founded in 1852 and headquartered in San Francisco, Wells Fargo provides banking, insurance, investments,
+                                mortgage, consumer, and commercial finance through various distribution channels. We have offices in more than
+                                35 countries to support customers who conduct business in the global economy. </p>
+                            <p>Wells Fargo serves one in three businesses in America.
+                                We&rsquo;ve operated under the same vision for decades: We want to satisfy all our customers&rsquo;
+                                financial needs and help them succeed financially. The GFI team executes this vision by serving the
+                                increasing financial needs of financial institutions, central banks, multi-laterals, sovereign wealth funds,
+                                and non-bank financial institutions in the markets where we conduct business.</p></td>
+                        <td>&nbsp;</td>
+                        <td valign="top" class="blocks ribron"><h3>Resources</h3></td>
+                    </tr>
+                    <tr>
+                        <td width="2%">&nbsp;</td>
+                        <td width="30%" valign="top" class="blocks"><p>Learn more about Wells Fargo </p>
+                            <ul>
+                                <li><a href="https://www.wellsfargo.com/downloads/pdf/about/wellsfargotoday.pdf">Wells Fargo Today</a></li>
+                                <li><a href="https://www.wellsfargo.com/downloads/pdf/about/csr/reports/2012-social-responsibility-interim.pdf">Social Responsibility report</a></li>
+                                <li><a href="https://www.wellsfargo.com/downloads/pdf/press/2q13pr.pdf">Latest earnings report</a></li>
+                            </ul>
+                            <p>&nbsp;</p></td>
+                    </tr>
+                    <tr>
+                        <td colspan="2"><p><strong>Our global presence includes: </strong></p>
+                            <ul>
+                                <li>Worldwide reach with over 35 overseas offices and branch locations in DIFC,
+                                    Hong Kong, <br>
+                                    London, Seoul, Shanghai, Singapore, Taipei, Tokyo, Toronto, and the Cayman Islands</li>
+                                <li>More than 3,000 team members covering the global needs of our clients</li>
+                                <li>Relationships with over 2,000 financial institutions overseas and in the U.S.</li>
+                                <li>Customers in over 125 countries</li>
+                            </ul>
+                            <p>To learn more, just click on one of the links below to download our brochure or visit <a href="http://www.wellsfargo.com/international">wellsfargo.com/international</a>.</p></td>
+                        <td>&nbsp;</td>
+                    </tr>
                 </table>
             </div>
             <em></em><!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
