--- a/pages/booth.html
+++ b/pages/booth.html
@@ -16,12 +16,6 @@
             $(function(){ $('html').addClass('msie'); });
             </script><![endif]-->
         <script src="../scripts/main.js"></script>
-
-        <!-- VIDEO BOOTSTRAP -->
-        <link href="../lib/video-js/video-js.css" rel="stylesheet">
-        <script src="../lib/video-js/video.js"></script>
-        <script> _V_.options.flash.swf = "../lib/video-js/video-js.swf"; </script>
-        <!-- END BOOTSTRAP -->
     </head>
     <body>
         <div id="all">
@@ -59,22 +53,38 @@
             </div>
             <!-- #EndLibraryItem -->
             <div id="feature">
+                <img class="" src="../images/banners/home.png" alt="">
                 <img class="banner" src="../images/header/reins.png" alt="">
                 <table>
                     <tr>
-                        <td valign="top"><h2>WELLS FARGO BOOTH</h2>
-                            <p>As a repeat exhibitor, Wells Fargo is excited to bring you a booth experience like no other. We look forward to seeing you at booth <u>No. F87</u>.</p>
-                    <p><strong>Learn. </strong>Stop by to take your picture in front of the Buffalo Bill stagecoach and learn more about the history of Wells Fargo.<br>
-                        <strong>Explore. </strong>Experience all the exciting new enhancements we&rsquo;ve made to our Sibos booth this year.<br>
-                        <strong>Connect.</strong> Our senior leadership and relationship managers look forward to connecting with you in our booth. </p>
+                        <td><h2>Wells Fargo Booth</h2></td>
+                        <td>&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <td><p>As a repeat exhibitor, Wells Fargo is excited to bring you a booth
+                                experience like no other. We look forward to seeing you at booth <u>No.
+                        F87</u>.</p>
+                    <p><strong>Learn. </strong>Stop by to take your picture in front of the
+                        Buffalo Bill stagecoach and learn more about the history of Wells Fargo.<br>
+                        <strong>Explore. </strong>Experience all the exciting new enhancements
+                        we&rsquo;ve made to our Sibos booth this year.<br>
+                        <strong>Connect.</strong> Our senior leadership and relationship managers look
+                        forward to connecting with you in our booth. </p>
                     <p>(link to exhibition floor map)  (include booth pictures)<br>
-                        <a title="booth_map" class="popup pic" href="../images/misc/booth_map.gif">View exhibition floor map</a> | <a title="rendered_booth" class="popup pic" href="../images/misc/rendered_booth.jpg">View Wells Fargo booth rendering</a></p></td>
-                    <td width="30%" valign="top"><p><strong>&lt;tile ad for booth check in gift&gt;</strong><br>
+                        <a title="booth_map" class="popup pic"
+                           href="../images/misc/booth_map.gif">View exhibition floor map</a> | <a
+                           title="rendered_booth" class="popup pic"
+                           href="../images/misc/rendered_booth.jpg">View Wells Fargo booth
+                            rendering</a></p></td>
+                    <td width="30%"><p><strong>&lt;tile ad for booth check in gift&gt;</strong><br>
                             <strong>Want one of these? (image of 3 in 1 phone charger booth giveaway)</strong></p>
-                        <p>Check into our booth via Foursquare or your LinkedIn account and receive a 3 in 1 phone charger while supplies last. You can also tweet about us via Twitter to receive your free gift.</p></td>
+                        <p>Check into our booth via Foursquare or your LinkedIn account and receive a
+                            3 in 1 phone charger while supplies last. You can also tweet about us via
+                            Twitter to receive your free gift.</p></td>
                     </tr>
                 </table>
-                <p class="shrink">*You may need Adobe Reader to read PDF files. <a href="http://get.adobe.com/reader">Download</a> Adobe Reader for free.</p>
+                <p class="shrink">*You may need Adobe Reader to read PDF files. <a
+                        href="http://get.adobe.com/reader">Download</a> Adobe Reader for free.</p>
                 <div class="popup">
                     <img id="booth_map" src="../images/misc/booth_map.gif" width="1000" tabindex="-1">
                     <br>
