--- a/pages/explore.html
+++ b/pages/explore.html
@@ -53,49 +53,50 @@
             </div>
             <!-- #EndLibraryItem -->
             <div id="feature">
+                <img class="" src="../images/banners/exploreDubaiPage.png" alt="">
                 <img class="banner" src="../images/header/reins.png" alt="">
                 <table>
-                <tr>
-                    <td width="72%" rowspan="2" valign="top">
-                        <h2>EXPLORE DUBAI</h2>
-                        <p>Located on the southern shore of the Arabian Gulf, Dubai is the
-                            second-largest of the seven Emirates that make up the United Arab Emirates.
-                            This thriving metropolis of over two million residents features architecture
-                            and attractions that rival the best that the rest of the world has to offer. </p>
-                        <h4>While in Dubai, you may want to visit:</h4>
-                        <ul>
-                            <li><strong><a
-                                        href="http://www.tripadvisor.com/Attraction_Review-g295424-d676922-Reviews-Burj_Khalifa-Dubai_Emirate_of_Dubai.html">Burj
-                                        Khalifa</a></strong> the world&rsquo;s tallest building, features a
-                                124th-floor outdoor observation deck with a telescope that allows you to
-                                examine the landscape in real-time or view previously saved images from
-                                different times of day and weather conditions. </li>
-                            <li><strong><a
-                                        href="http://www.tripadvisor.com/Attraction_Review-g295424-d1176635-Reviews-Dolphin_Bay-Dubai_Emirate_of_Dubai.html">Dolphin
-                                        Bay</a></strong> one of the world&rsquo;s largest dolphin habitats gives you a
-                                chance to stand, swim, or scuba dive with these beautiful, intelligent
-                                creatures.</li>
-                            <li><strong><a
-                                        href="http://http://www.tripadvisor.com/Attraction_Review-g295424-d561527-Reviews-Ski_Dubai-Dubai_Emirate_of_Dubai.html">Ski
-                                        Dubai</a></strong> is the world&rsquo;s third-largest indoor ski slope and the
-                                first to open in the Middle East.</li>
-                            <li><strong><a
-                                        href="http://www.tripadvisor.com/Attraction_Review-g295424-d1936354-Reviews-Dubai_Fountains-Dubai_Emirate_of_Dubai.html">Dubai
-                                        Fountain</a></strong> shoots water up to 500 feet high as music plays during
-                                daily performances on the Burj Khalifa Lake.</li>
-                            <li><strong><a
-                                        href="http://www.tripadvisor.com/Attraction_Review-g295424-d1792285-Reviews-Dubai_Aquarium_Underwater_Zoo-Dubai_Emirate_of_Dubai.html">Dubai
-                                        Aquarium &amp; Underwater Zoo</a></strong> one of the largest tanks in the
-                                world, is home to more than 33,000 animals and sea creatures you can examine
-                                from inside its acrylic walk-through tunnel.</li>
-                        </ul></td>
-                    <td valign="top">&nbsp;</td>
-                    <td valign="top"><p>&nbsp;</p></td>
-                </tr>
-                <tr>
-                    <td width="7%" valign="top">&nbsp;</td>
-                    <td width="21%" valign="top">&nbsp;</td>
-                </tr>
+                    <tr>
+                        <td width="72%" rowspan="2">
+                            <h2>Explore Dubai</h2>
+                            <p>Located on the southern shore of the Arabian Gulf, Dubai is the
+                                second-largest of the seven Emirates that make up the United Arab Emirates.
+                                This thriving metropolis of over two million residents features architecture
+                                and attractions that rival the best that the rest of the world has to offer. </p>
+                            <p><strong>While in Dubai, you may want to visit:</strong></p>
+                            <ul>
+                                <li><strong><a
+                                            href="http://www.tripadvisor.com/Attraction_Review-g295424-d676922-Reviews-Burj_Khalifa-Dubai_Emirate_of_Dubai.html">Burj
+                                            Khalifa</a></strong> the world&rsquo;s tallest building, features a
+                                    124th-floor outdoor observation deck with a telescope that allows you to
+                                    examine the landscape in real-time or view previously saved images from
+                                    different times of day and weather conditions. </li>
+                                <li><strong><a
+                                            href="http://www.tripadvisor.com/Attraction_Review-g295424-d1176635-Reviews-Dolphin_Bay-Dubai_Emirate_of_Dubai.html">Dolphin
+                                            Bay</a></strong> one of the world&rsquo;s largest dolphin habitats gives you a
+                                    chance to stand, swim, or scuba dive with these beautiful, intelligent
+                                    creatures.</li>
+                                <li><strong><a
+                                            href="http://http://www.tripadvisor.com/Attraction_Review-g295424-d561527-Reviews-Ski_Dubai-Dubai_Emirate_of_Dubai.html">Ski
+                                            Dubai</a></strong> is the world&rsquo;s third-largest indoor ski slope and the
+                                    first to open in the Middle East.</li>
+                                <li><strong><a
+                                            href="http://www.tripadvisor.com/Attraction_Review-g295424-d1936354-Reviews-Dubai_Fountains-Dubai_Emirate_of_Dubai.html">Dubai
+                                            Fountain</a></strong> shoots water up to 500 feet high as music plays during
+                                    daily performances on the Burj Khalifa Lake.</li>
+                                <li><strong><a
+                                            href="http://www.tripadvisor.com/Attraction_Review-g295424-d1792285-Reviews-Dubai_Aquarium_Underwater_Zoo-Dubai_Emirate_of_Dubai.html">Dubai
+                                            Aquarium &amp; Underwater Zoo</a></strong> one of the largest tanks in the
+                                    world, is home to more than 33,000 animals and sea creatures you can examine
+                                    from inside its acrylic walk-through tunnel.</li>
+                            </ul></td>
+                        <td>&nbsp;</td>
+                        <td><p>&nbsp;</p></td>
+                    </tr>
+                    <tr>
+                        <td width="7%">&nbsp;</td>
+                        <td width="21%">&nbsp;</td>
+                    </tr>
                 </table>
             </div>
             <!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
