--- a/pages/home.html
+++ b/pages/home.html
@@ -27,95 +27,103 @@
                 </div>
                 <div class="navb">
                     <!--
--->
+                    -->
                     <a href="home.html">Home</a>
                     <!--
--->
+                    -->
                     <a href="about.html">About Wells Fargo</a>
                     <!--
--->
+                    -->
                     <a href="events.html">Sibos Events</a>
                     <!--
--->
+                    -->
                     <a href="booth.html">Wells Fargo Booth</a>
                     <!--
--->
+                    -->
                     <a href="speakers.html">Sibos Speakers</a>
                     <!--
--->
+                    -->
                     <a href="explore.html">Explore Dubai</a>
                     <!--
--->
+                    -->
                     <a href="giving.html">Charitable giving</a>
                     <!--
--->
+                    -->
                 </div>
             </div>
             <!-- #EndLibraryItem -->
             <div id="feature">
-                <div id="banner" style="display: none;">
-                    <a href="visit.html">
-                <img class="banner" src="../images/header/reins.png" alt="">
-                    </a> <a href="about.html">
-                <img class="banner" src="../images/header/reins.png" alt="">
-                    </a> <a href="explore.html">
-                <img class="banner" src="../images/header/reins.png" alt="">
-                    </a> <a href="pubs.html">
-                <img class="banner" src="../images/header/reins.png" alt="">
-                    </a> <a href="giving.html">
-                <img class="banner" src="../images/header/reins.png" alt="">
-                    </a> <a href="photos.html">
-                <img class="banner" src="../images/header/reins.png" alt="">
-                    </a>
-                <img class="banner" src="../images/header/reins.png" alt="">
-                </div>
+                <img class="" src="../images/banners/home.png" alt="">
+                <img class="banner1" src="../images/header/reins.png" alt="">
                 <table>
-                <tr>
-                    <td colspan="2"><p>Thank you for visiting the Wells Fargo Sibos webpage. Once again, our Global Financial Institutions (GFI)
-                            team has an exciting program lined up for you during the week of the conference,
-                            and we look forward to seeing you in Dubai.</p>
-                        <p>For more information about Sibos 2013, please visit the official Sibos website at <a href="http://www.sibos.com">sibos.com</a>. </p></td>
-                    <td>&nbsp;</td>
-                </tr>
-                <tr>
-                    <td width="32%" rowspan="2" valign="top" class="blocks"><h3><a class="learn" href="visit.html">learn more</a>Sibos events </h3>
-                        <p><strong>Sunday, October 28</strong><br>
-                            5:00 p.m. – 8:00 p.m.<br>
-                            <a href="../email/727872/index.html">Annual Sibos Celebration</a><br>
-                            Taiko-en<br>
-                            Space is limited, <a href="../email/727872/index.html">RSVP here</a>.</p>
-                        <p><strong>Tuesday, October 30</strong><br>
-                            <em>Transparency: The new paradigm impacting Global Transaction Banking</em><br>
-                            3:00 p.m. – 4:00 pm<br>
-                            Katsura Room L5<br>
-                            Hyatt Regency Hotel<br>
-                            Space is limited, <a href="../email/734818/index.html"> RSVP here</a>. <em><br>
-                            Please speak with your relationship manager about availability.</em></p>
-                        <p><strong>Tuesday, October 30</strong><br>
-                            4:00 p.m. – 5:30 p.m.<br>
-                            <a href="../email/727874/index.html">Booth reception</a><br>
-                            Wells Fargo booth No. 4B06, Hall 4 </p></td>
-                    <td width="35%" rowspan="2" valign="top" class="blocks"><h3><a class="learn" href="giving.html">learn
-                                more</a>Get involved</h3>
-                        <p>
-                            <img  src="../images/photos/bird.png" alt="bird" width="93" height="90" style="
+                    <tr>
+                        <td colspan="5"><p>Thank you for visiting the Wells Fargo
+                                Sibos webpage. Once again, our Global Financial
+                                Institutions (GFI) team has an exciting program lined up
+                                for you during the week of the conference, and we look
+                                forward to seeing you in Dubai.</p>
+                            <p>For more information about Sibos 2013, please visit the
+                                official Sibos website at <a
+                                    href="http://www.sibos.com">sibos.com</a>. </p></td>
+                    </tr>
+                    <tr>
+                        <td class="blocks ribron"><a class="learn" href="events.html">learn more</a>
+                            <h3>Sibos events </h3></td>
+                        <td>&nbsp;</td>
+                        <td class="blocks ribron"><a class="learn" href="giving.html">learn more</a>
+                            <h3>Get involved</h3></td>
+                        <td>&nbsp;</td>
+                        <td rowspan="2" style="position: relative;"><p><span class="blocks" style="position: relative;"><span class="blocks" style="position: relative;"><span class="blocks" style="position: relative;"><a title="booth_map" class="popup pic" href="../images/misc/booth_map.gif">
+                                                <img src="../images/text/4B06.png" width="239" height="74" alt="Booth 4B06">
+                                            </a></span></span></span><a title="booth_map" class="popup pic" href="../images/misc/booth_map.gif">
+                                    <img src="../images/text/4B06.png" width="239" height="74" alt="Booth 4B06">
+                                </a></p></td>
+                    </tr>
+                    <tr>
+                        <td
+                            class="blocks"><p><strong>Sunday, October 28</strong><br>
+                                5:00 p.m. – 8:00 p.m.<br>
+                                <a
+                                    href="../email/727872/index.html">Annual Sibos
+                                    Celebration</a><br>
+                                Taiko-en<br>
+                                Space is limited, <a
+                                    href="../email/727872/index.html">RSVP here</a>.</p>
+                            <p><strong>Tuesday, October 30</strong><br>
+                                <em>Transparency: The new paradigm impacting Global
+                                    Transaction Banking</em><br>
+                                3:00 p.m. – 4:00 pm<br>
+                                Katsura Room L5<br>
+                                Hyatt Regency Hotel<br>
+                                Space is
+                                limited, <a href="../email/734818/index.html"> RSVP
+                                    here</a>. <em><br>
+                                    Please speak with your relationship
+                                    manager about availability.</em></p>
+                            <p><strong>Tuesday, October 30</strong><br>
+                                4:00 p.m. – 5:30 p.m.<br>
+                                <a href="../email/727874/index.html">Booth reception</a><br>
+                                Wells Fargo booth No. 4B06, Hall 4 </p></td>
+                        <td style="position: relative;">&nbsp;</td>
+                        <td class="blocks" style="position: relative;"><p>
+                                <img  src="../images/photos/bird.png" alt="bird" width="93" height="90" style="
 
-                                     bottom: -11px;
-                                     float: right;
-                                     right: -11px;
+                                      bottom: -11px;
+                                      float: right;
+                                      right: -11px;
 
-                                     ">
-                            Wells Fargo is proud to partner with <a href="http://www.globalgiving.org/">GlobalGiving.org</a> again
-                            to offer you a wonderful program that gives back to our communities.</p></td>
-                    <td width="33%" height="147" valign="top" class="blocks" style="position: relative;"><a title="booth_map" class="popup pic" href="../images/misc/booth_map.gif">
-                            <img src="../images/text/4B06.png" width="239" height="74" alt="Booth 4B06">
-                        </a></td>
-                </tr>
-                <tr>
-                    <td width="33%" valign="top" class="blocks" style="position: relative;"><a title="booth_map" class="popup pic" href="../images/misc/booth_map.gif">
-                            <img src="../images/text/4B06.png" width="239" height="74" alt="Booth 4B06">
-                        </a></td>
-                </tr>
+                                      ">
+                                Wells Fargo is proud to partner with <a href="http://www.globalgiving.org/">GlobalGiving.org</a> again
+                                to offer you a wonderful program that gives back to our communities.</p></td>
+                        <td style="position: relative;">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <td width="33%" class="blocks">&nbsp;</td>
+                        <td width="1%">&nbsp;</td>
+                        <td width="33%" class="blocks">&nbsp;</td>
+                        <td width="1%">&nbsp;</td>
+                        <td width="33%" style="position: relative;">&nbsp;</td>
+                    </tr>
                 </table>
                 <div class="popup">
                     <img id="booth_map" src="../images/misc/booth_map.gif" tabindex="-1">
