--- a/pages/speakers.html
+++ b/pages/speakers.html
@@ -16,12 +16,6 @@
             $(function(){ $('html').addClass('msie'); });
             </script><![endif]-->
         <script src="../scripts/main.js"></script>
-
-        <!-- VIDEO BOOTSTRAP -->
-        <link href="../lib/video-js/video-js.css" rel="stylesheet">
-        <script src="../lib/video-js/video.js"></script>
-        <script> _V_.options.flash.swf = "../lib/video-js/video-js.swf"; </script>
-        <!-- END BOOTSTRAP -->
     </head>
     <body>
         <div id="all">
@@ -33,62 +27,97 @@
                 </div>
                 <div class="navb">
                     <!--
--->
+                    -->
                     <a href="home.html">Home</a>
                     <!--
--->
+                    -->
                     <a href="about.html">About Wells Fargo</a>
                     <!--
--->
+                    -->
                     <a href="events.html">Sibos Events</a>
                     <!--
--->
+                    -->
                     <a href="booth.html">Wells Fargo Booth</a>
                     <!--
--->
+                    -->
                     <a href="speakers.html">Sibos Speakers</a>
                     <!--
--->
+                    -->
                     <a href="explore.html">Explore Dubai</a>
                     <!--
--->
+                    -->
                     <a href="giving.html">Charitable giving</a>
                     <!--
--->
+                    -->
                 </div>
             </div>
             <!-- #EndLibraryItem -->
             <div id="feature">
+                <img class="" src="../images/banners/home.png" alt="">
                 <img class="banner" src="../images/header/reins.png" alt="">
                 <table>
                 <tr>
-                    <td colspan="2" valign="top"><h2>SIBOS SPEAKERS</h2>
+                    <td colspan="4"><h2>Sibos Speakers</h2>
                         <p>Hear Wells Fargo subject matter experts speak during these Sibos sessions:</p></td>
-                    <td width="30%" valign="top">&nbsp;</td>
+                    <td>&nbsp;</td>
                 </tr>
                 <tr>
-                    <td width="33%" valign="top" class="blocks"><p><strong>Mobile banking: New technologies that improve the customer experience</strong><br>
+                    <td class="blocks"><p><strong>Mobile banking: New technologies that improve the customer experience</strong><br>
                             <strong>Tuesday, September 17</strong><br>
                             <strong>4:00 pm to 5:00 pm</strong><br>
                             <strong>Conference room 3 - CR3</strong><br>
-                            Featuring: Mike Kennedy, head of Innovation and Payments Strategy (insert picture of Mike and <a href="http://collaboration-iceo.wellsfargo.com/sites/MSC/wbr/PDFBioFinals/KennedyMichaelBio.pdf">link to Mike&rsquo;s bio</a>)</p>
-                        <p> How to generate value and develop an infrastructure that supports the strategic use of gamification and social media to improve the customer experience. </p>
-                    <td valign="top" class="blocks"><p><strong>&lt;placeholder for tile ad&gt;</strong><br>
+                            Featuring: Mike Kennedy, head of Innovation and
+                            Payments Strategy (insert picture of Mike and <a
+                                    href="http://collaboration-iceo.wellsfargo.com/sites/MSC/wbr/PDFBioFinals/KennedyMichaelBio.pdf">link
+                                to Mike&rsquo;s bio</a>)</p>
+                        <p> How to generate value and develop an
+                            infrastructure that supports the strategic use of
+                            gamification and social media to improve the customer
+                            experience. </p>
+                    <td>&nbsp;</td>
+                    <td class="blocks"><p><strong>&lt;placeholder for tile ad&gt;</strong><br>
                              Share your pony story with us <br>
                             #WFpony</p>
                         <p class="hide">How is the role of an IT leader changing to meet the challenges of delivering operational excellence in a world of ever-growing
                             demands and relentless volatility? What is the impact of cultural, technology, and generation shifts? What skills and
                             leadership styles do brave new leaders need to embrace and how is that different from the past?</p></td>
-                    <td valign="top" class="blocks"><p><strong>Risk management: From grapple to grip</strong><br>
+                    <td>&nbsp;</td>
+                    <td class="blocks"><p><strong>Risk management: From grapple to grip</strong><br>
                             <strong>Wednesday, September 18</strong><br>
                             <strong>2:00 pm to 3:00 pm</strong><br>
                             <strong>Conference room 1 - CR1 </strong><br>
-                            Featuring: Tom Lickiss, head of Business Risk for GFI (insert picture of Tom and link to <a href="http://collaboration-iceo.wellsfargo.com/sites/MSC/wbr/PDFBioFinals/lickissthomasbio.pdf">Tom&rsquo;s bio</a>)<br>
-                            Banks are exposed to a wide and increasing range of risks that can have an impact on their reputation. The panel will discuss how banks apply a risk-based approach to measure and mitigate their liabilities. How do they move from understanding risk to applying controls in line with their risk appetite? How can they benchmark their policies and procedures with global best practices?</p>
-                        <p>You&rsquo;ll find more information about these sessions – including the full Sibos conference program – at sibos.com. <a href="http://www.sibos.com/conference/sessions.page?navtab=tab2">http://www.sibos.com/conference/sessions.page?navtab=tab2</a></p>
-                        <p class="hide">How is the role of an IT leader changing to meet the challenges of delivering operational excellence in a world of ever-growing
-                            demands and relentless volatility? What is the impact of cultural, technology, and generation shifts? What skills and
-                            leadership styles do brave new leaders need to embrace and how is that different from the past?</p></td>
+                            Featuring: Tom Lickiss, head of Business Risk for
+                            GFI (insert picture of Tom and link to <a
+                                    href="http://collaboration-iceo.wellsfargo.com/sites/MSC/wbr/PDFBioFinals/lickissthomasbio.pdf">Tom&rsquo;s
+                                bio</a>)<br>
+                            Banks are exposed to a wide and
+                            increasing range of risks that can have an impact
+                            on their reputation. The panel will discuss how
+                            banks apply a risk-based approach to measure and
+                            mitigate their liabilities. How do they move from
+                            understanding risk to applying controls in line
+                            with their risk appetite? How can they benchmark
+                            their policies and procedures with global best
+                            practices?</p>
+                        <p>You&rsquo;ll find more information about these
+                            sessions – including the full Sibos conference program
+                            – at sibos.com. <a
+                                    href="http://www.sibos.com/conference/sessions.page?navtab=tab2">http://www.sibos.com/conference/sessions.page?navtab=tab2</a></p>
+                        <p class="hide">How is the role of an IT leader
+                            changing to meet the challenges of delivering
+                            operational excellence in a world of ever-growing
+                            demands and relentless volatility? What is the impact
+                            of cultural, technology, and generation shifts? What
+                            skills and leadership styles do brave new leaders need
+                            to embrace and how is that different from the
+                            past?</p></td>
+                </tr>
+                <tr>
+                    <td width="33%">
+                    <td width="1%">&nbsp;</td>
+                    <td width="33%">&nbsp;</td>
+                    <td width="1%">&nbsp;</td>
+                    <td width="33%">&nbsp;</td>
                 </tr>
                 </table>
                 <p class="shrink">*You may need Adobe Reader to read PDF files. <a href="http://get.adobe.com/reader">Download</a> Adobe Reader for free.</p>
