--- a/pages/events.html
+++ b/pages/events.html
@@ -16,12 +16,6 @@
             $(function(){ $('html').addClass('msie'); });
             </script><![endif]-->
         <script src="../scripts/main.js"></script>
-
-        <!-- VIDEO BOOTSTRAP -->
-        <link href="../lib/video-js/video-js.css" rel="stylesheet">
-        <script src="../lib/video-js/video.js"></script>
-        <script> _V_.options.flash.swf = "../lib/video-js/video-js.swf"; </script>
-        <!-- END BOOTSTRAP -->
     </head>
     <body>
         <div id="all">
@@ -33,44 +27,54 @@
                 </div>
                 <div class="navb">
                     <!--
--->
+                    -->
                     <a href="home.html">Home</a>
                     <!--
--->
+                    -->
                     <a href="about.html">About Wells Fargo</a>
                     <!--
--->
+                    -->
                     <a href="events.html">Sibos Events</a>
                     <!--
--->
+                    -->
                     <a href="booth.html">Wells Fargo Booth</a>
                     <!--
--->
+                    -->
                     <a href="speakers.html">Sibos Speakers</a>
                     <!--
--->
+                    -->
                     <a href="explore.html">Explore Dubai</a>
                     <!--
--->
+                    -->
                     <a href="giving.html">Charitable giving</a>
                     <!--
--->
+                    -->
                 </div>
             </div>
             <!-- #EndLibraryItem -->
             <div id="feature">
+                <img class="" src="../images/banners/sibosEventsPage.png" alt="">
                 <img class="banner" src="../images/header/reins.png" alt="">
                 <table>
                 <tr>
-                    <td colspan="2" valign="top"><h2>SIBOS EVENTS</h2>
-                        <p>Renew friendships and create new ones. We&rsquo;re proud to be hosting our annual Sibos Celebration reception at Dubai&rsquo;s most prestigious landmark –
-                        Burj Khalifa – the tallest structure in the world. In addition, we&rsquo;ll be hosting a welcome reception at the Wells Fargo Sibos booth and a breakfast seminar
-                        on &ldquo;Rapidly evolving payment and trade corridors.&rdquo; Please contact your Wells Fargo GFI relationship manager for more details about any of these events. We hope you can join us at one of these events. </p></td>
-                    <td width="30%" valign="top">&nbsp;</td>
+                    <td colspan="2"><h2>Sibos Events</h2>
+                        <p>Renew friendships and create new ones.
+                            We&rsquo;re proud to be hosting our annual Sibos
+                            Celebration reception at Dubai&rsquo;s most
+                            prestigious landmark – Burj Khalifa – the tallest
+                            structure in the world. In addition, we&rsquo;ll
+                            be hosting a welcome reception at the Wells Fargo
+                            Sibos booth and a breakfast seminar on
+                            &ldquo;Rapidly evolving payment and trade
+                            corridors.&rdquo; Please contact your Wells Fargo
+                            GFI relationship manager for more details about
+                            any of these events. We hope you can join us at
+                            one of these events. </p></td>
+                    <td width="30%">&nbsp;</td>
                 </tr>
                 <tr>
-                    <td width="33%" valign="top" class="blocks">
-                    <td colspan="2" valign="top" class="blocks"><p><strong>Sunday, September 15 </strong><br>
+                    <td width="33%" class="blocks">
+                    <td colspan="2" class="blocks"><p><strong>Sunday, September 15 </strong><br>
                             <strong>4:00 p.m. to 7:00 </strong><strong>p.m.</strong> <br>
                             Annual Sibos Celebration <br>
                             Armani Hotel in Burj Khalifa </p>
@@ -79,12 +83,20 @@
                             Booth Reception (link to HTML invite) <br>
                             Wells Fargo booth No. F87, Exhibition Hall Zone B (link to WF booth section) </p>
                         <p><strong>Wednesday, September 18</strong><br>
-                            <strong>7:30 a.m. to 8:30 a.m.</strong><br>
-                            &ldquo;Rapidly evolving payment and trade corridors&rdquo; (link to HTML invite) <br>
-                            Space is limited, so please speak to your relationship manager about availability. </p>
-                        <p class="hide">How is the role of an IT leader changing to meet the challenges of delivering operational excellence in a world of ever-growing
-                            demands and relentless volatility? What is the impact of cultural, technology, and generation shifts? What skills and
-                            leadership styles do brave new leaders need to embrace and how is that different from the past?</p></td>
+                            <strong>7:30 a.m. to 8:30
+                            a.m.</strong><br>
+                            &ldquo;Rapidly evolving payment and trade corridors&rdquo;
+                            (link to HTML invite) <br>
+                            Space is limited, so please speak to your
+                            relationship manager about availability. </p>
+                        <p class="hide">How is the role of an IT leader
+                            changing to meet the challenges of delivering
+                            operational excellence in a world of ever-growing
+                            demands and relentless volatility? What is the
+                            impact of cultural, technology, and generation
+                            shifts? What skills and leadership styles do brave
+                            new leaders need to embrace and how is that
+                            different from the past?</p></td>
                 </tr>
                 </table>
                 <p class="shrink">*You may need Adobe Reader to read PDF files. <a href="http://get.adobe.com/reader">Download</a> Adobe Reader for free.</p>
